<resources>
    <string name="app_name">Nanodegree</string>
    <string name="action_settings">Settings</string>
    <string name="main_title">My Nanodregee Apps</string>
    <string name="main_spotify">Spotify Streamer App</string>
    <string name="main_scores">Football Scores App</string>
    <string name="main_library">Library App</string>
    <string name="main_bigger">Build It Bigger App</string>
    <string name="main_reader">XYZ Reader App</string>
    <string name="main_capstone">Capstone App</string>
    <string name="main_toast">This button will launch my</string>
    <string name="spotify_searcher_title">Spotify Streamer</string>
    <string name="spotify_dialog_wait">Wait...</string>
    <string name="spotify_searcher_not_found">Ups :( artist name not found, please refine your search</string>
    <string name="spotify_top_tracks_title">Top 10 Tracks</string>
    <string name="spotify_song_title">Song title</string>
    <string name="spotify_album_name">Album name</string>
    <string name="spotify_artist_name">Artist name</string>
    <string name="spotify_no_internet">It looks you don\'t have internet connection</string>
    <string name="title_activity_spotify_player">SpotifyPlayerActivity</string>
    <string name="spotify_no_tracks">This artist doesn\'t has tracks :(</string>
    <string name="tickerSpotify">Playing: </string>
    <string name="notification_track_title">Track Title</string>
    <string name="notification_artist_name">Artist name</string>
    <string name="share_with">Share with...</string>
    <string name="action_playingnow">Playing now...</string>
    <string name="country_AF">Afghanistan</string>
    <string name="country_AX">Åland Islands</string>
    <string name="country_AL">Albania</string>
    <string name="country_DZ">Algeria</string>
    <string name="country_AS">American Samoa</string>
    <string name="country_AD">Andorra</string>
    <string name="country_AO">Angola</string>
    <string name="country_AI">Anguilla</string>
    <string name="country_AQ">Antarctica</string>
    <string name="country_AG">Antigua and Barbuda</string>
    <string name="country_AR">Argentina</string>
    <string name="country_AM">Armenia</string>
    <string name="country_AW">Aruba</string>
    <string name="country_AU">Australia</string>
    <string name="country_AT">Austria</string>
    <string name="country_AZ">Azerbaijan</string>
    <string name="country_BS">Bahamas</string>
    <string name="country_BH">Bahrain</string>
    <string name="country_BD">Bangladesh</string>
    <string name="country_BB">Barbados</string>
    <string name="country_BY">Belarus</string>
    <string name="country_BE">Belgium</string>
    <string name="country_BZ">Belize</string>
    <string name="country_BJ">Benin</string>
    <string name="country_BM">Bermuda</string>
    <string name="country_BT">Bhutan</string>
    <string name="country_BO">Bolivia, Plurinational State of</string>
    <string name="country_BQ">Bonaire, Sint Eustatius and Saba</string>
    <string name="country_BA">Bosnia and Herzegovina</string>
    <string name="country_BW">Botswana</string>
    <string name="country_BV">Bouvet Island</string>
    <string name="country_BR">Brazil</string>
    <string name="country_IO">British Indian Ocean Territory</string>
    <string name="country_BN">Brunei Darussalam</string>
    <string name="country_BG">Bulgaria</string>
    <string name="country_BF">Burkina Faso</string>
    <string name="country_BI">Burundi</string>
    <string name="country_CV">Cabo Verde</string>
    <string name="country_KH">Cambodia</string>
    <string name="country_CM">Cameroon</string>
    <string name="country_CA">Canada</string>
    <string name="country_KY">Cayman Islands</string>
    <string name="country_CF">Central African Republic</string>
    <string name="country_TD">Chad</string>
    <string name="country_CL">Chile</string>
    <string name="country_CN">China</string>
    <string name="country_CX">Christmas Island</string>
    <string name="country_CC">Cocos (Keeling) Islands</string>
    <string name="country_CO">Colombia</string>
    <string name="country_KM">Comoros</string>
    <string name="country_CG">Congo</string>
    <string name="country_CD">Congo, the Democratic Republic of the</string>
    <string name="country_CK">Cook Islands</string>
    <string name="country_CR">Costa Rica</string>
    <string name="country_CI">Côte d\'Ivoire</string>
    <string name="country_HR">Croatia</string>
    <string name="country_CU">Cuba</string>
    <string name="country_CW">Curaçao</string>
    <string name="country_CY">Cyprus</string>
    <string name="country_CZ">Czech Republic</string>
    <string name="country_DK">Denmark</string>
    <string name="country_DJ">Djibouti</string>
    <string name="country_DM">Dominica</string>
    <string name="country_DO">Dominican Republic</string>
    <string name="country_EC">Ecuador</string>
    <string name="country_EG">Egypt</string>
    <string name="country_SV">El Salvador</string>
    <string name="country_GQ">Equatorial Guinea</string>
    <string name="country_ER">Eritrea</string>
    <string name="country_EE">Estonia</string>
    <string name="country_ET">Ethiopia</string>
    <string name="country_FK">Falkland Islands (Malvinas)</string>
    <string name="country_FO">Faroe Islands</string>
    <string name="country_FJ">Fiji</string>
    <string name="country_FI">Finland</string>
    <string name="country_FR">France</string>
    <string name="country_GF">French Guiana</string>
    <string name="country_PF">French Polynesia</string>
    <string name="country_TF">French Southern Territories</string>
    <string name="country_GA">Gabon</string>
    <string name="country_GM">Gambia</string>
    <string name="country_GE">Georgia</string>
    <string name="country_DE">Germany</string>
    <string name="country_GH">Ghana</string>
    <string name="country_GI">Gibraltar</string>
    <string name="country_GR">Greece</string>
    <string name="country_GL">Greenland</string>
    <string name="country_GD">Grenada</string>
    <string name="country_GP">Guadeloupe</string>
    <string name="country_GU">Guam</string>
    <string name="country_GT">Guatemala</string>
    <string name="country_GG">Guernsey</string>
    <string name="country_GN">Guinea</string>
    <string name="country_GW">Guinea-Bissau</string>
    <string name="country_GY">Guyana</string>
    <string name="country_HT">Haiti</string>
    <string name="country_HM">Heard Island and McDonald Islands</string>
    <string name="country_VA">Holy See</string>
    <string name="country_HN">Honduras</string>
    <string name="country_HK">Hong Kong</string>
    <string name="country_HU">Hungary</string>
    <string name="country_IS">Iceland</string>
    <string name="country_IN">India</string>
    <string name="country_ID">Indonesia</string>
    <string name="country_IR">Iran, Islamic Republic of</string>
    <string name="country_IQ">Iraq</string>
    <string name="country_IE">Ireland</string>
    <string name="country_IM">Isle of Man</string>
    <string name="country_IL">Israel</string>
    <string name="country_IT">Italy</string>
    <string name="country_JM">Jamaica</string>
    <string name="country_JP">Japan</string>
    <string name="country_JE">Jersey</string>
    <string name="country_JO">Jordan</string>
    <string name="country_KZ">Kazakhstan</string>
    <string name="country_KE">Kenya</string>
    <string name="country_KI">Kiribati</string>
    <string name="country_KP">Korea, Democratic People\'s Republic of</string>
    <string name="country_KR">Korea, Republic of</string>
    <string name="country_KW">Kuwait</string>
    <string name="country_KG">Kyrgyzstan</string>
    <string name="country_LA">Lao People\'s Democratic Republic</string>
    <string name="country_LV">Latvia</string>
    <string name="country_LB">Lebanon</string>
    <string name="country_LS">Lesotho</string>
    <string name="country_LR">Liberia</string>
    <string name="country_LY">Libya</string>
    <string name="country_LI">Liechtenstein</string>
    <string name="country_LT">Lithuania</string>
    <string name="country_LU">Luxembourg</string>
    <string name="country_MO">Macao</string>
    <string name="country_MK">Macedonia, the former Yugoslav Republic of</string>
    <string name="country_MG">Madagascar</string>
    <string name="country_MW">Malawi</string>
    <string name="country_MY">Malaysia</string>
    <string name="country_MV">Maldives</string>
    <string name="country_ML">Mali</string>
    <string name="country_MT">Malta</string>
    <string name="country_MH">Marshall Islands</string>
    <string name="country_MQ">Martinique</string>
    <string name="country_MR">Mauritania</string>
    <string name="country_MU">Mauritius</string>
    <string name="country_YT">Mayotte</string>
    <string name="country_MX">Mexico</string>
    <string name="country_FM">Micronesia, Federated States of</string>
    <string name="country_MD">Moldova, Republic of</string>
    <string name="country_MC">Monaco</string>
    <string name="country_MN">Mongolia</string>
    <string name="country_ME">Montenegro</string>
    <string name="country_MS">Montserrat</string>
    <string name="country_MA">Morocco</string>
    <string name="country_MZ">Mozambique</string>
    <string name="country_MM">Myanmar</string>
    <string name="country_NA">Namibia</string>
    <string name="country_NR">Nauru</string>
    <string name="country_NP">Nepal</string>
    <string name="country_NL">Netherlands</string>
    <string name="country_NC">New Caledonia</string>
    <string name="country_NZ">New Zealand</string>
    <string name="country_NI">Nicaragua</string>
    <string name="country_NE">Niger</string>
    <string name="country_NG">Nigeria</string>
    <string name="country_NU">Niue</string>
    <string name="country_NF">Norfolk Island</string>
    <string name="country_MP">Northern Mariana Islands</string>
    <string name="country_NO">Norway</string>
    <string name="country_OM">Oman</string>
    <string name="country_PK">Pakistan</string>
    <string name="country_PW">Palau</string>
    <string name="country_PS">Palestine, State of</string>
    <string name="country_PA">Panama</string>
    <string name="country_PG">Papua New Guinea</string>
    <string name="country_PY">Paraguay</string>
    <string name="country_PE">Peru</string>
    <string name="country_PH">Philippines</string>
    <string name="country_PN">Pitcairn</string>
    <string name="country_PL">Poland</string>
    <string name="country_PT">Portugal</string>
    <string name="country_PR">Puerto Rico</string>
    <string name="country_QA">Qatar</string>
    <string name="country_RE">Réunion</string>
    <string name="country_RO">Romania</string>
    <string name="country_RU">Russian Federation</string>
    <string name="country_RW">Rwanda</string>
    <string name="country_BL">Saint Barthélemy</string>
    <string name="country_SH">Saint Helena, Ascension and Tristan da Cunha</string>
    <string name="country_KN">Saint Kitts and Nevis</string>
    <string name="country_LC">Saint Lucia</string>
    <string name="country_MF">Saint Martin (French part)</string>
    <string name="country_PM">Saint Pierre and Miquelon</string>
    <string name="country_VC">Saint Vincent and the Grenadines</string>
    <string name="country_WS">Samoa</string>
    <string name="country_SM">San Marino</string>
    <string name="country_ST">Sao Tome and Principe</string>
    <string name="country_SA">Saudi Arabia</string>
    <string name="country_SN">Senegal</string>
    <string name="country_RS">Serbia</string>
    <string name="country_SC">Seychelles</string>
    <string name="country_SL">Sierra Leone</string>
    <string name="country_SG">Singapore</string>
    <string name="country_SX">Sint Maarten (Dutch part)</string>
    <string name="country_SK">Slovakia</string>
    <string name="country_SI">Slovenia</string>
    <string name="country_SB">Solomon Islands</string>
</resources>