<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_material_dark"
    android:orientation="horizontal"
    style="@android:style/TextAppearance.StatusBar.EventContent">

    <ImageView
        android:id="@+id/notification_track_thumbnail"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:contentDescription="@string/app_name"
        android:layout_margin="8dp"
        android:src="@drawable/spotifyicon" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/notification_text"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentBottom="false"
            android:layout_toRightOf="@+id/notification_track_thumbnail"
            android:gravity="center_horizontal"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/notification_cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:src="@android:drawable/ic_menu_close_clear_cancel"
                android:layout_alignParentRight="true" />

            <TextView
                android:id="@+id/notification_track_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/notification_track_title"
                android:textStyle="bold"
                android:ellipsize="end"
                android:layout_gravity="center_horizontal"
                android:singleLine="true"
                android:layout_alignParentEnd="false"
                android:layout_alignParentRight="false"
                android:gravity="center" />

            <TextView
                android:id="@+id/notification_artist_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/notification_artist_name"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:singleLine="true"
                android:ellipsize="end"
                android:layout_below="@id/notification_track_title"/>
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/notification_control"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/notification_text"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_centerHorizontal="true">

            <ImageView
                android:id="@+id/notification_prev_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:src="@android:drawable/ic_media_previous" />

            <ImageView
                android:id="@+id/notification_play_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:src="@android:drawable/ic_media_pause"/>

            <ImageView
                android:id="@+id/notification_next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:src="@android:drawable/ic_media_next" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>